--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -88,7 +88,7 @@
         .portrait {
             width: 200px;
             height: 200px;
-            background: url(/dist/img/portrait.jpg);
+            background: url('/dist/img/portrait.jpg');
             border-radius: 50%;
             border: solid 3px $secondary-color;
 
