--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 200px;
       height: 200px;
-      background: url("../../dist/img/portrait.jpg");
+      background: url("../img/portrait.jpg");
       border-radius: 50%;
       border: solid 3px blue; }
   .menu .nav-item {
@@ -100,7 +100,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url("../../Portfolio_website/dist/img/background.jpg");
+    background: url("../img/background.jpg");
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img::after {
@@ -154,7 +154,8 @@ main {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+  grid-template-areas: 'bioimage bio bio'
+ 'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr); }
   .about-info .bio-image {
     grid-area: bioimage;
@@ -259,11 +260,15 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url("../../dist/img/portrait_small.jpg");
+      background: url("../img/portrait_small.jpg");
       width: 110px;
       height: 110px; }
   .about-info {
-    grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
+    grid-template-areas: 'bioimage'
+ 'bio'
+ 'job1'
+ 'job2'
+ 'job3';
     grid-template-columns: 1fr; }
   .projects {
     grid-template-columns: repeat(2, 1fr); } }
